# pdf_merger

./: .gitignore  README.md  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
src/pdf_merger/: cli.py
