[project]
name = "pdf-merger"
version = "0.0.1"
description = "A simple tool to merge PDF files"
readme = "README.md"
requires-python = ">=3.12"
keywords = []
authors = [
    { name = "Aitor Izuzquiza", email = "aitor.izuzquiza@gmail.es" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.2.0",
    "pypdf2>=3.0.1",
]

[project.scripts]
pdf-merge = "pdf_merger.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/pdf_merger"]

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_merger"]

lint = ["ruff>=0.11.9"]
